# coreproject

tracker/backend/: pyproject.toml
tracker/backend/coreproject_tracker/: __main__.py  app.py  geo.py  proximity.py
tracker/backend/coreproject_tracker/bep/: __init__.py  announce_lifecycle.py  bep14.py  bep27.py  bep40.py
tracker/backend/coreproject_tracker/constants/: __init__.py  interval.py  regions.py
tracker/backend/coreproject_tracker/converters/: bytes.py  ip.py  numbers.py
tracker/backend/coreproject_tracker/datastructures/immutable/: http.py  (+3 more)
tracker/backend/coreproject_tracker/envs/: __init__.py  rate_limit.py  workers.py
tracker/backend/coreproject_tracker/functions/: __init__.py  array.py  bytes.py  convertion.py  events.py  ip.py  peers.py  redis.py  weight.py
tracker/backend/coreproject_tracker/geo_data/: IPLocate-Country-GeoIPCompat-Locations-en.csv
tracker/backend/coreproject_tracker/lua/: __init__.py
tracker/backend/coreproject_tracker/servers/: http.py  udp.py  websocket.py
tracker/backend/coreproject_tracker/singletons/: redis.py
tracker/backend/coreproject_tracker/validators/: __init__.py  blocklist.py  ip.py  length.py  lpd.py  port.py  rate_limit.py
tracker/backend/tests/: conftest.py
tracker/backend/tests/compatibility/: test_bep_compliance.py
tracker/backend/tests/integration/: test_announce_lifecycle.py  test_bep14.py  test_bep27.py  test_bep40.py  test_http_endpoints.py  test_udp_server.py  test_udp_validation.py
tracker/backend/tests/unit/: test_bytes.py  test_constants.py  test_converters.py  test_convertion.py  test_datastructures.py  test_dictionary.py  test_enums.py  test_envs.py  test_events.py  test_functions_bytes.py  test_functions_convertion.py  test_functions_dictionary.py  test_functions_events.py  test_functions_ip.py  test_functions_weight.py  test_geo.py  test_ip.py  test_proximity.py  test_singletons.py  test_transaction.py  test_validators.py  test_weight.py
(+35 files in other folders)
