[project]
name = "tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.8.0",
    "attrs>=25.1.0",
    "bencode-py>=4.0.0",
    "flask-orjson>=2.0.0; platform.python_implementation == 'CPython'",
    "hypercorn>=0.17.3",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "redis[hiredis]>=8.0.0",
    "uvloop>=0.21.0; sys_platform == 'linux'",
]

[tool.setuptools]
packages = ["coreproject_tracker"]

[project.scripts]
coreproject_tracker = "coreproject_tracker.__main__:main"

[dependency-groups]
dev = [
    "py-spy>=0.4.2",
    "pyrefly>=1.0.0",
]
lint = [
    "ruff>=0.15.15",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx2>=0.1.0",
    "respx>=0.22.0",
    "time-machine>=2.16.0",
    "dirty-equals>=0.8.0",
]

[tool.uv]
default-groups = ["dev", "lint", "test"]
package = true

[tool.ruff.lint]
extend-select = ["I"]  # Enables isort rules

[tool.ruff.format]
skip-magic-trailing-comma = false  # Avoids conflict with isort.split-on-trailing-comma

[tool.ruff.lint.isort]
split-on-trailing-comma = true  # Keep this aligned with format.skip-magic-trailing-comma
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=coreproject_tracker",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=100",
    "-v",
    "--tb=short",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["coreproject_tracker"]
branch = true

[tool.coverage.paths]
source = ["coreproject_tracker", "*/site-packages/coreproject_tracker"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
